# CO650_TASK2

./: CMakeLists.txt  README.md  client.cpp  server.cpp
include/: Client.h  Comms.h  CreateSocketException.h  Server.h
include/exceptions/: AcceptException.h  BindException.h  ConnectException.h  CreateSocketException.h  ListenException.h  ReceiveException.h  SendException.h  WhatWhyExceptionBase.h
src/: Client.cpp  Comms.cpp  CreateSocketException.cpp  Server.cpp
src/exceptions/: AcceptException.cpp  BindException.cpp  ConnectException.cpp  CreateSocketException.cpp  ListenException.cpp  ReceiveException.cpp  SendException.cpp
